--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Miguel GP
+  name             : "Miguel GP"
   avatar           : "profile.png"
   bio              : "Your biography for the left-hand sidebar"
   location         : "Los Angeles"
