--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Miguel GP / WIP SITE"
 title_separator          : "-"
 name                     : &name "Miguel GP"
-description              : &description "personal description"
+description              : &description "PhD student at the University of California Riverside"
 url                      : https://mgp-333.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "mgp-333/mgp-333.github.io"
